Started vulva, started boobs, continued penis, updated journal
VULVA {
Added a clitoris-like particle with a static constraint, gives a bit of a feeling of a joystick ish. My first idea was to be able to play with it in order to make something else happen. The whole idea started because when I was working on my grieving game "Grief Rush Millenium" I played with making a matterjs chain with really tight constraints between particles and this produced a sort of unhinged vibrating creature moving around. I thought maaaybe I could use this as a vibrator of sorts. So I created a vibrator with two particles tightly contrained, and I though maybe at first the constraints are tight but not tight enough that they make the composite vibrate, but when the user picks the toy up, then the constraints tighten and it starts vibrating. The player then rubs it on the particle and something happens. I started doing that but wasn't really feeling anything. More on that in the journal. So I skipped to another experiment for the moment.
}

BOOBS {
Added two ellipses at first as boobs but I thought they were too round and not interesting. I was using two chain of boobs tightly constrained together with a line the same size drawn from particle to particle, with the first one being static, so that if I pull on them they seems to elongate a bit. I used the same principle as the penis but with tighter and shorter length of constraints.  I tried playing with new shapes, like a chain of polygons to try and mimick a more triangular shape. What I ended up doing was to make the particles gradually bigger in the chain. So the first static one was like 155px, then the next 5 px bigger and so forth, making a sort of pear-ish form which stayed simple and minimalistic like the other sketches but was still reminiscent of more realistic boobs (KINDOF). I also added nipples, with rectangular bodies with rounded corners (chamfer, new option I tried which I liked and got me excited ) At this point I was ha

--- a/sex_toys/penis/css/style.css
+++ b/sex_toys/penis/css/style.css
@@ -1,17 +1,34 @@
 *,
-html{
-    margin:0;
-    padding: 0;
+html {
+  margin: 0;
+  padding: 0;
 }
 
-body{
+#canvases {
   display: grid;
   /* Set up the grid and justify/align to center */
   justify-content: center;
   align-content: center;
-  height: 100vh;
+  height: 800px;
+  width: 1000px;
   /* Body is the height of the viewport */
   overflow: hidden;
+
+  /* background-color: black; */
   /* Hide anything that goes off the window size */
+  /* background-color: black; */
+  /* background-color: black; */
 }
 
+/* canvas {
+} */
+
+#p5js-canvas,
+#particles-canvas {
+  position: absolute;
+}
+
+#particles-canvas {
+  position: absolute;
+  filter: url("#gooey");
+}
