--- a/sex_toys/penis/css/style.css
+++ b/sex_toys/penis/css/style.css
@@ -4,6 +4,9 @@ html {
   padding: 0;
 }
 
+body {
+  background-color: #fbe74e;
+}
 #canvases {
   display: grid;
   /* Set up the grid and justify/align to center */
