--- a/sex_toys/anal_beads/css/style.css
+++ b/sex_toys/anal_beads/css/style.css
@@ -14,3 +14,37 @@ body {
   overflow: hidden;
   /* Hide anything that goes off the window size */
 }
+
+#p5jsCanvas {
+  position: relative;
+}
+
+.infoBubble {
+  position: absolute;
+  width: 250px;
+  height: 250px;
+  background-color: #222222;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+
+  /* Start hidden by scaling it down */
+  transform: scale(0);
+  transform-origin: center; /* Ensure scaling happens from the center */
+  transition: transform 0.3s ease; /* Smooth scaling animation */
+}
+
+.textInfoBubble {
+  text-align: center;
+  color: white;
+  font-family: sans-serif;
+  font-size: 15px;
+  margin: 28px 25px 20px 25px;
+  opacity: 0; /* Text starts invisible */
+  transition: opacity 0.1s ease; /* Smooth fade-in/out */
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
+}
