--- a/sex_toys/penis/css/style.css
+++ b/sex_toys/penis/css/style.css
@@ -1,37 +1,28 @@
+/* Reset margins, paddings, and ensure full height */
 *,
-html {
+html,
+body {
   margin: 0;
   padding: 0;
-}
-
-body {
-  background-color: #fbe74e;
-}
-#canvases {
-  display: grid;
-  /* Set up the grid and justify/align to center */
-  justify-content: center;
-  align-content: center;
-  height: 800px;
-  width: 1000px;
-  /* Body is the height of the viewport */
+  width: 100%;
+  height: 100%;
   overflow: hidden;
-
-  /* background-color: black; */
-  /* Hide anything that goes off the window size */
-  /* background-color: black; */
-  /* background-color: black; */
 }
 
-/* canvas {
-} */
+/* Center the #canvases div perfectly in the middle of the window */
 
+/* Both canvases will stack on top of each other */
 #p5js-canvas,
 #particles-canvas {
   position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: fit-content;
+  height: fit-content;
 }
 
+/* Gooey effect applied to the particles canvas */
 #particles-canvas {
-  position: absolute;
   filter: url("#gooey");
 }
