--- a/sex_toys/anal_beads/css/style.css
+++ b/sex_toys/anal_beads/css/style.css
@@ -1,13 +1,50 @@
 @font-face {
-  font-family: "gtAmerica";
-  src: url("/sex_toys/anal_beads/assets/fonts/GT-America-Regular.otf")
-    format("opentype");
+  font-family: "GT America Regular";
+  src: url("./GT-America-Regular.otf") format("opentype");
 }
+
 @font-face {
-  font-family: "clubSexu";
-  src: url("/sex_toys/anal_beads/assets/fonts/Club_Sexu-Regular.woff")
-    format("opentype");
+  font-family: "GT America Medium Italic";
+  src: url("./GT-America-Standard-Medium-Italic.woff2") format("woff2"),
+    url("./GT-America-Standard-Medium-Italic.woff") format("woff"),
+    url("./GT-America-Standard-Medium-Italic.ttf") format("truetype"),
+    url("./GT-America-Standard-Medium-Italic.otf") format("opentype");
+  font-style: italic;
+  font-weight: 500; /* Medium */
 }
+
+@font-face {
+  font-family: "GT America Medium";
+  src: url("./GT-America-Standard-Medium.woff2") format("woff2"),
+    url("./GT-America-Standard-Medium.woff") format("woff"),
+    url("./GT-America-Standard-Medium.ttf") format("truetype"),
+    url("./GT-America-Standard-Medium.otf") format("opentype");
+  font-style: normal;
+  font-weight: 500; /* Medium */
+}
+
+@font-face {
+  font-family: "Club Sexu_Regular";
+  src: url("./Club_Sexu-Italic.eot");
+  src: url("./Club_Sexu-Regular.eot") format("embedded-opentype"),
+    url("./Club_Sexu-Regular.woff") format("woff"),
+    url("./Club_Sexu-Regular.woff2") format("woff2"),
+    url("./Club_Sexu-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Club Sexu_Italic";
+  src: url("Club_Sexu-Italic.eot");
+  src: url("Club_Sexu-Italic.eot?#iefix") format("embedded-opentype"),
+    url("Club_Sexu-Italic.woff") format("woff"),
+    url("Club_Sexu-Italic.woff2") format("woff2"),
+    url("Club_Sexu-Italic.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
 *,
 html {
   margin: 0;
@@ -54,8 +91,8 @@ body {
 }
 
 .infoCard {
-  /* display: flex; */
-  /* flex-direction: column; */
+  display: flex;
+  flex-direction: column;
   /* justify-content: center; */
   /* align-items: center; */
   text-align: left; /* Center text inside the card */
@@ -76,7 +113,7 @@ body {
 }
 
 .textInfoCard {
-  font-family: "gtAmerica";
+  font-family: "GT America Regular";
   font-size: 16px;
   color: #f2eedf;
   padding-top: 15px;
@@ -86,17 +123,22 @@ body {
 
 .continueButton {
   position: absolute;
-  bottom: -15px; /* Position the button at the bottom of the card */
-  /* align-self: center; Center the button horizontally */
-  left: 48px;
-  font-family: "clubSexu";
-  font-size: 15px;
+  bottom: -12px; /* Position the button at the bottom of the card */
+
+  /* left: 53px; */
+  align-self: center;
+  text-align: center;
+  font-family: "Club Sexu_Regular";
+  /* font-family: "Club Sexu_Regular"; */
+  font-size: 16px;
   color: #bc3006;
   padding: 3px 18px;
   padding-top: 5px;
   border-radius: 20px;
   background-color: #f2eedf;
   letter-spacing: 0.02rem;
+  border: none;
+  /* border-color: #7fbc06; */
 }
 
 .cardNumber {
@@ -106,7 +148,7 @@ body {
   /* font-family: "gtAmerica"; */
   padding: 2px 15px;
   border-width: 1px;
-  align-self: center; /* Center the button horizontally */
+  /* align-self: center; Center the button horizontally */
   top: -16px;
   text-align: center;
   /* border-style: solid; */
@@ -116,7 +158,6 @@ body {
 
 .cardNumberText {
   color: #f2eedf;
-
-  font-family: "clubSexu";
+  font-family: "Club Sexu_Regular";
   font-size: 25px;
 }
