I have the number of card appearing on top of the cards... so 1 to 9
I like the series of numbers, it makes it more easy to flow

--- a/sex_toys/anal_beads/css/style.css
+++ b/sex_toys/anal_beads/css/style.css
@@ -132,8 +132,12 @@ body {
   /* font-family: "Club Sexu_Regular"; */
   font-size: 16px;
   color: #bc3006;
-  padding: 3px 18px;
+  /* padding: 3px 18px; */
+  padding-left: 18px;
+  padding-right: 18px;
+
   padding-top: 5px;
+  padding-bottom: 2px;
   border-radius: 20px;
   background-color: #f2eedf;
   letter-spacing: 0.02rem;
