Grab and grabbing cursor, button animation and journal update
the grabing hand on the canvas is really nice because it helps to understand the need to pull or grab something. Enhances the physical thing. Button animation is darker when clicking on it. Helps also UI wise to make it feel easy.

--- a/sex_toys/anal_beads/css/style.css
+++ b/sex_toys/anal_beads/css/style.css
@@ -49,6 +49,7 @@
 html {
   margin: 0;
   padding: 0;
+  /* cursor: grab; */
 }
 
 body {
@@ -65,6 +66,14 @@ body {
 
 #p5jsCanvas {
   position: relative;
+}
+
+canvas {
+  cursor: grab;
+}
+
+canvas:active {
+  cursor: grabbing;
 }
 
 .infoCardDiv {
@@ -117,6 +126,8 @@ body {
   font-size: 16px;
   color: #f2eedf;
   padding-top: 15px;
+  user-select: none; /* Prevent text selection */
+
   /* top: -20px; */
   /* margin-bottom: 40px; Ensure space for the button */
 }
@@ -139,7 +150,7 @@ body {
   padding-top: 5px;
   padding-bottom: 2px;
   border-radius: 20px;
-  background-color: #f2eedf;
+  background-color: #fff6f1;
   letter-spacing: 0.02rem;
   border: none;
   /* border-color: #7fbc06; */
