--- a/sex_toys/boobs/css/style.css
+++ b/sex_toys/boobs/css/style.css
@@ -1,10 +1,15 @@
-*,
-html{
-    margin:0;
-    padding: 0;
+@font-face {
+  font-family: "GT America Regular";
+  src: url("GT-America-Regular.otf") format("opentype");
 }
 
-body{
+*,
+html {
+  margin: 0;
+  padding: 0;
+}
+
+body {
   display: grid;
   /* Set up the grid and justify/align to center */
   justify-content: center;
@@ -15,3 +20,130 @@ body{
   /* Hide anything that goes off the window size */
 }
 
+#infoCardDiv {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  width: 0;
+  height: 0;
+  overflow: hidden; /* Prevent content from showing while shrinking */
+  top: 300px;
+  left: 500px;
+  background-color: #37010f;
+  border-radius: 10%;
+  padding: 20px;
+  /* opacity: 10%; */
+  /* display: flex;  */
+  /* margin: 10px; */
+  align-items: center; /* Centers content vertically */
+  justify-content: center; /* Centers content horizontally */
+  /* display: none; */
+  opacity: 0;
+  transition: height 0.4s cubic-bezier(0, 0, 0.15, 1.01); /* Smooth size change */
+}
+
+#infoCardDiv.visible {
+  display: flex;
+  width: 220px; /* Full width of the card */
+  height: 280px; /* Full height of the card */
+  opacity: 1;
+}
+
+#infoCard {
+  /* justify-content: center; */
+  /* height: 100%; */
+  /* align-items: center; */
+  overflow: visible;
+  text-align: left; /* Center text inside the card */
+  color: #f4eddb;
+  height: 100%;
+  width: fit-content;
+  border-radius: 15px;
+  border: 1px solid #f4eddb;
+  opacity: 0;
+  transition: opacity 0.3s cubic-bezier(0, 0, 0.15, 1.01);
+  /* padding: 16px; Adds spacing inside the card */
+  box-sizing: border-box; /* Includes padding in the width/height */
+  position: relative; /* Necessary for the absolute button to be positioned relative to this card */
+  padding: 25px;
+  border-bottom: 0;
+}
+
+#infoCard.opacity {
+  opacity: 1;
+}
+
+#textInfoCard {
+  font-family: "GT America Regular";
+  /* font-size: 14px; */
+  font-size: 16px;
+  color: #f2eedf;
+  /* padding-top: 15px; */
+  user-select: none; /* Prevent text selection */
+  /* top: -20px; */
+  /* margin-bottom: 40px; Ensure space for the button */
+}
+
+#continueButton {
+  /* position: absolute; */
+  color: #f2eedf;
+  border-color: #f2eedf;
+  border-style: solid;
+  /* border-width: 2px; */
+  /* left: 53px; */
+  /* align-self: center; */
+  text-align: center;
+  /* font-family: "Club Sexu_Regular"; */
+  /* font-family: "Club Sexu_Regular"; */
+  font-size: 16px;
+  width: 100%;
+  padding: 5px;
+  height: 40px;
+  /* color: #bc3006; */
+  /* padding: 3px 18px; */
+  /* padding-left: 18px; */
+  /* padding-right: 18px; */
+  /* width: 220px; */
+  /* padding-top: 5px; */
+  /* padding-bottom: 2px; */
+  background-color: #37010f;
+  border-radius: 20px;
+  border-width: 1px;
+  /* letter-spacing: 0.02rem; */
+  /* border: none; */
+  user-select: none;
+  /* border-color: #7fbc06; */
+}
+
+#cardNumber {
+  position: absolute;
+  align-self: center;
+  text-align: center;
+  background-color: #37010f;
+  /* background-color: #c78a9a; */
+  padding: 10px;
+  top: 0;
+  height: fit-content;
+  width: 10px;
+  /* background-color: #ff4c1e; */
+  /* font-family: "gtAmerica"; */
+  /* padding: 2px 15px; */
+  /* border-width: 1px; */
+  /* align-self: center; Center the button horizontally */
+  /* top: -20px; */
+  /* text-align: center; */
+  /* border-style: solid; */
+  /* border-radius: 100%; */
+  z-index: 1;
+}
+
+#cardNumberText {
+  /* position: absolute; */
+  font-size: 16px;
+  /* display: flex; */
+  color: #f2eedf;
+  font-family: "GT America Regular";
+  font-size: 16px;
+  user-select: none; /* Prevent text selection */
+  align-items: center;
+}
