--- a/sex_toys/boobs/css/style.css
+++ b/sex_toys/boobs/css/style.css
@@ -8,6 +8,10 @@ html {
   margin: 0;
   padding: 0;
 }
+/* #flipWrapper {
+  transform: rotate(-90deg);
+  transform-origin: center center;
+} */
 
 body {
   display: grid;
